fix: cors 에러 테스트